force-app/main/default/objects/Visit__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback</label>
    <length>30</length>
    <type>Text</type>
</CustomField>