force-app/main/default/objects/Visit__c/fields/FR__c.field-meta.xml
<CustomField>
    <fullName>FR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>