force-app/main/default/objects/Visit__c/fields/Hospital_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Phone__c</fullName>
    <formula>Hospitals__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>