force-app/main/default/objects/Visit__c/fields/Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Hospitals__c</fullName>
    <label>Hospitals</label>
    <referenceTo>Hospitals__c</referenceTo>
    <relationshipLabel>Hospital</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>