force-app/main/default/objects/Visit__c/validationRules/Visit_Date_Cannot_Be_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_Cannot_Be_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>VisitDate__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>VisitDate__c</errorDisplayField>
    <errorMessage>The date cannot be greater than today&apos;s date.</errorMessage>
</ValidationRule>